Moved the tab break from the link to the span. This allows for multiple icons, as icons overwrite this link image and thus wouldn't have a tab break. This was originally solved for the watchlist star by using a right margin, so this one is removed to prevent double borders.

--- a/skins/vector/screen.css
+++ b/skins/vector/screen.css
@@ -165,10 +165,6 @@ div#mw-head h5 {
 		height: 1.9em;
 		padding-left: 0.5em;
 		padding-right: 0.5em;
-		/* @embed */
-		background-image: url(images/tab-break.png);
-		background-position: bottom right;
-		background-repeat: no-repeat;
 		color: #0645ad;
 		cursor: pointer;
 		font-size: 0.8em;
@@ -176,6 +172,10 @@ div#mw-head h5 {
 	/* IGNORED BY IE6 */
 	div.vectorTabs li > a {
 		display: block;
+	}
+	div.vectorTabs li.icon a {
+		background-position: bottom right;
+		background-repeat: no-repeat;
 	}
 	/* OVERRIDDEN BY COMPLIANT BROWSERS */
 	div.vectorTabs span a  {
@@ -187,6 +187,13 @@ div#mw-head h5 {
 	div.vectorTabs span > a {
 		float: left;
 		display: block;
+	}
+	div.vectorTabs span {
+		display: inline-block;
+		/* @embed */
+		background-image: url(images/tab-break.png);
+		background-position: bottom right;
+		background-repeat: no-repeat;
 	}
 	div.vectorTabs li.selected a,
 	div.vectorTabs li.selected a:visited{
@@ -1166,10 +1173,6 @@ div#bodyContent {
 }
 
 /* Watch/Unwatch Icon Styling */
-#ca-unwatch.icon,
-#ca-watch.icon {
-	margin-right:1px;
-}
 #ca-unwatch.icon a,
 #ca-watch.icon a {
 	margin: 0;
